# ircgramd

./: .gitignore  Readme.rst  setup.cfg  setup.py
ircgramd/: __init__.py
teleirc/: __init__.py
