[metadata]
name = IRCGramD
author = David Francos Cuartero
author-email = opensource@davidfrancos.net
summary = Telegram IRC
description-file = Readme.rst
home-page = https://github.com/XayOn/ircgramd
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only

[files]
packages =
    ircgramd

pbr.config.drivers =
    plain = pbr.cfg.driver:Plain

[entry_points]
console_scripts =
    ircgramd = ircgramd:main
